--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.6.2",
     "sort-by": "^0.0.2"
   },
